--- a/paper/references.bib
+++ b/paper/references.bib
@@ -220,6 +220,15 @@
   publisher={Wiley Online Library}
 }
 
+@book{bishop-prml,
+  title={Pattern recognition and machine learning},
+  author={Bishop, Christopher M and Nasrabadi, Nasser M},
+  volume={4},
+  number={4},
+  year={2006},
+  publisher={Springer},
+  pages={435-455}
+}
 
 
 % NMF
