--- a/paper/references.bib
+++ b/paper/references.bib
@@ -1182,3 +1182,16 @@
   organization={IEEE},
   DOI={10.1109/IGARSS47720.2021.9553319}
 }
+
+
+% --- NDWI
+@article{ndwi,
+  title={The use of the Normalized Difference Water Index (NDWI) in the delineation of open water features},
+  author={McFeeters, Stuart K},
+  journal={International journal of remote sensing},
+  volume={17},
+  number={7},
+  pages={1425--1432},
+  year={1996},
+  publisher={Taylor \& Francis}
+}
