update results again...

--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -385,13 +385,13 @@ To showcase the ability of the GSM to identify spatially localized contaminant s
 \begin{figure}[H]
 \begin{adjustwidth}{-\extralength}{0cm}
 \centering
-\includegraphics[width=1.25\columnwidth]{results/robot-team/plume-evo.pdf}
+\includegraphics[width=1.35\columnwidth]{results/robot-team/plume-evo.pdf}
 \end{adjustwidth}
 \caption{Rhodamine plume evolution: Using the trained GSM we can track the dispersion of the rhodamine dye plume between successive drone flights. \textbf{(a)} The initial plume distribution after release. Here the dye subsumes an area of $255.7$ $\text{m}^2$. \textbf{(b)} The same plume imaged 15 minutes later now extends across an area of $571.8$ $\text{m}^2$}
 \label{fig:plume-evo}
 \end{figure}  
 
-Applying the trained GSM to unmix HSI from UAV flights provides an efficient way to map contaminant dispersion. Figure~\ref{fig:plume-evo} demonstrates this by mapping the growing extent of the rhodamine dye between successive UAV flights. In just $15$ minutes, the plume expands from an initial area of $255.7$ $\text{m}^2$ to over $571.8$ $\text{m}^2$ as the dye disperses into the surrounding water. 
+Applying the trained GSM to unmix HSI from UAV flights provides an efficient way to map contaminant dispersion and transport. Figure~\ref{fig:plume-evo} demonstrates this by mapping the growing extent of the rhodamine dye between successive UAV flights. In just $15$ minutes, the plume expands from an initial area of $255.7$ $\text{m}^2$ to over $571.8$ $\text{m}^2$ as the dye mixes into the surrounding water. 
 
 \section{Discussion}\label{sec:disucssion}
 
